--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwindcss</title>
   </head>
-  <body></body>
+  <body>
+    <div class="flex">
+      <p class="bg-red-500 font-bold">test</p>
+    </div>
+  </body>
 </html>
